--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
   },
   "dependencies": {
     "@openzeppelin/contracts": "^5.3.0",
-    "@openzeppelin/contracts-upgradeable": "^5.3.0"
+    "@openzeppelin/contracts-upgradeable": "^5.3.0",
+    "@wagmi/core": "^2.17.3",
+    "viem": "^2.31.7",
+    "wagmi": "^2.15.6"
   }
 }
