--- a/package.json
+++ b/package.json
@@ -19,8 +19,9 @@
     "@openzeppelin/contracts": "^5.3.0",
     "@openzeppelin/contracts-upgradeable": "^5.3.0",
     "@wagmi/core": "^2.17.3",
+    "autoprefixer": "^10.4.21",
+    "tailwindcss": "^3.4.17",
     "viem": "^2.31.7",
     "wagmi": "^2.15.6"
   }
-  
 }
