--- a/package.json
+++ b/package.json
@@ -12,8 +12,12 @@
   "type": "commonjs",
   "devDependencies": {
     "@nomicfoundation/hardhat-toolbox": "^6.0.0",
+    "@nomicfoundation/hardhat-verify": "^2.0.14",
     "dotenv": "^17.2.0",
-    "hardhat": "^2.25.0"
+    "hardhat": "^2.25.0",
+    "hardhat-contract-sizer": "^2.10.0",
+    "hardhat-deploy": "^1.0.4",
+    "truffle-flattener": "^1.6.0"
   },
   "dependencies": {
     "@openzeppelin/contracts": "^5.3.0",
